--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 	<header class="site-header">
 	<nav >
 	<div class="logo">
-	<h1>Modern Website</h1>
+	<h1>Rubi Maurya</h1>
 	</div>
 	<div class="menu">
 	<ul>
 	<li>HOME</li>
 	<li>SERVICE</li>
-	<li>ABIOUT US</li>
+	<li>ABOUT US</li>
 	<li>CONTACT US</li>
 	</ul>
   </nav>
@@ -25,8 +25,8 @@
 	<img src="C:\Users\Akky The Maurya\Desktop\Rubi/screenshot (1).png">
 	</div>
 	<div class="rightside">
-	<h1>Our Modern Website</h1>
-	<p>We are learing </p>
+	<h1>Welcome to My Site</h1>
+	<p>I'm learning the web development</p>
 	<button>Welcome</button>
 	</div>
 	
