--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </header>
  <section>
 	<div class="leftside">
-	<img src="C:\Users\Akky The Maurya\Desktop\Rubi/screenshot (1).png">
+	<img src="https://github.com/akhileshmau/Bttalks/screenshot (1).png">
 	</div>
 	<div class="rightside">
 	<h1>Welcome to My Site</h1>
