--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
   <html>
 	 <head>
 	 <title></title>
-	 <link rel="stylesheet" href=" https://ramosmd.github.io/css/style.css">
-	 
+	 <link rel="stylesheet"type="text/css" href="style.css">
 </head>
 <body>
 	<header class="site-header">
